[package]
name = "oktree"
description = "Fast octree implementation."
version = "0.5.0"
repository = "https://github.com/exor2008/oktree"
keywords = ["graphics", "bevy", "voxel", "octree"]
edition = "2024"
license = "MIT"

[features]
default = ["std"]
std = ["num/default"]
bevy = ["dep:bevy"]
examples = [
    "bevy/bevy_camera",
    "bevy/bevy_color",
    "bevy/bevy_gizmos_render",
    "bevy/bevy_render",
    "bevy/bevy_pbr",
    "bevy/default_app",
    "bevy/default_platform",
]

[dependencies]
num = { version = "0.4.3", default-features = false }
bevy = { version = ">=0.9", optional = true, default-features = false }
heapless = "0.8.0"
smallvec = { version = "1.13.2", features = ["const_generics"] }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
wee_alloc = "0.4.5"

[[bench]]
name = "benchmark"
harness = false
required-features = ["examples"]

[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["examples"]

[[example]]
name = "bevy_tree"
path = "examples/bevy_tree.rs"
required-features = ["examples"]

[[example]]
name = "profile"
path = "examples/profile.rs"
required-features = ["examples"]

[[example]]
name = "no_std"
path = "examples/no_std.rs"
required-features = ["examples"]

[package.metadata.docs.rs]
all-features = true

[profile.profiler]
inherits = "release"
debug = "full"
split-debuginfo = "packed"
opt-level = 3
