[package]
name = "oktree"
description = "Fast octree implementation."
version = "0.5.0"
repository = "https://github.com/exor2008/oktree"
keywords = ["graphics", "bevy", "voxel", "octree"]
edition = "2024"
license = "MIT"

[features]
default = ["std"]
std = ["num/default", "bevy"]
bevy = ["dep:bevy_math"]

examples = [
    "dep:bevy",
    "bevy/bevy_camera",
    "bevy/bevy_color",
    "bevy/bevy_gizmos_render",
    "bevy/bevy_render",
    "bevy/bevy_pbr",
    "bevy/default_app",
    "bevy/default_platform",
]

[dependencies]
num = { version = "0.4", default-features = false }
bevy_math = { version = ">=0.9", optional = true }
bevy = { version = ">=0.9", optional = true, default-features = false }
heapless = "0.9"
smallvec = { version = "1.13", features = ["const_generics"] }

[dev-dependencies]
criterion = "0.8"
rand = "0.10"
wee_alloc = "0.4"

[[bench]]
name = "benchmark"
harness = false
required-features = ["bevy"]

[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["examples"]

[[example]]
name = "bevy_tree"
path = "examples/bevy_tree.rs"
required-features = ["examples"]

[[example]]
name = "profile"
path = "examples/profile.rs"
required-features = ["examples"]

[[example]]
name = "no_std"
path = "examples/no_std.rs"
required-features = ["examples"]

[package.metadata.docs.rs]
all-features = true

[profile.profiler]
inherits = "release"
debug = "full"
split-debuginfo = "packed"
opt-level = 3
